# OpenVINO_project

./: .gitignore  20170309103202.xml  20170310131650.caffemodel  20170310131650_deploy.prototxt  README.md
Hey_Spark_OpenVINO/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CON  FPGA_runtimes  Makefile  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  predictions_gold_pred.txt  voice_recognition_OpenVINO  voice_recognition_OpenVINO.cpp  voice_recognition_OpenVINO.ilk  voice_recognition_OpenVINO.vcxproj  voice_recognition_OpenVINO.vcxproj.filters  voice_recognition_openVINO.cpp
Hey_Spark_OpenVINO/Debug/: voice_recognition_OpenVINO.ilk
Hey_Spark_OpenVINO/Optimized/: wakeword_deploy.prototxt
Hey_Spark_OpenVINO/documentation/: AN 807 Configuring the Intel Arria 10 GX FPGA Development Kit for the Intel FPGA SDK for OpenCL.html  AN 807: Configuring the Intel Arria 10 GX FPGA Development Kit for the Intel FPGA SDK for OpenCL.html  Installation Guide for Intel® Distribution of OpenVINO™ toolkit with Support for FPGA 2 | Intel® Software
Hey_Spark_OpenVINO/ie_cpu_extension/: Makefile  ie_cpu_extension.vcxproj
Hey_Spark_OpenVINO/preprocessing/: mfcc_preprocess
Hey_Spark_OpenVINO/recordings/: voice_rec_live_processed
Hey_Spark_OpenVINO/results/: FPGA_runtimes.txt
Hey_Spark_OpenVINO/wav_utils/: record_voice.cpp  write_wav.h
Intel samples/: CMakeLists.txt
Intel samples/crossroad_camera_sample/: README.md  crossroad_camera_sample.hpp  (+1 more)
KWS_OpenVINO/: voice_recognition_OpenVINO.cpp  words.mapping  words.xml
cnn/: Makefile
cnn_live/: Makefile
fpga_support_files/: README  install_openvino_fpga_dependencies.sh  setup_env.sh
input_data/: input_1_data.npy
new_main/: .#new_main_sample.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpuid.txt  new_main_sample  new_main_sample.cpp  read_data  read_data.cpp
new_main/Optimized/: wakeword.mapping  wakeword.xml
new_main/ie_cpu_extension/: Makefile  cmake_install.cmake
new_main_live/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  new_main_live  new_main_live.cpp
(+131 files in other folders)
